src/tests/errors/operators/003.ura
// errors/operators/003 — adding two structs without an `operator +` overload
use "@/header"

struct Vec:
    x int
    y int

main():
    a Vec
    b Vec
    c Vec = a + b
    output(c.x, "\n")
